# Numerical-Analysis-Methods

./: .gitignore  GaussianElimination.py  README.md  hillClimb.pl  plotting.pl  spiral.pl  test.pl  test.py
Finding Large Primes/: FindingLargePrimes.md  Makefile  findPrimes  findPrimes-old-working  findPrimes-old-working.c  findPrimes.c
Finding Large Primes/SquareRootMethods/: Babylonian.pyo  Halley.pyo  NewtonSqrt  NewtonSqrt.c  SquareRoot.py  SquareRoot.pyo  pythonSpeedTest.sh
MATLAB/: Adams_Bashforth2.m  EulerApproximation.fig  Euler_method.m  FivePointCenterDifference.m  FivePointOneSideDifference.m  Newton_poly.m  Runge_Kutta2.m  Runge_Kutta4.m  Simp_int.m  ThreePointOnSideDifference.m  backward_difference.m  bisection_method.m  center_difference.m  fixed_point_iteration.m  forward_difference.m  newton_method.m  piecewise1.m  secant_method.m  trap_int.m  trap_int2.m
MatrixMult/: Makefile  main.cpp  mathlib.cpp  mathlib.h
Parallelized Python Module/: Array_Reversal.h  CMakeLists.txt  Makefile  test_array_reversal  test_array_reversal.cpp
SquareRootMethods/: Babylonian.py  Halley.py  sqrt_speed_README.txt
optimize/: Equation.pm  equation.pm  hillClimb.pl
